Preparing for dev release
Dynamic Image Resizer DONE! So we can now have the perfect performance on a image-based website. Also, only one or two commits away for the first pre-alpha release (code Harvard Panther) which is a massive milestone for the DSGNR project. If you read this commit message, well you are a true Scholar and a Gentleman

--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,7 +1,11 @@
+# Redirect to /public
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews
     </IfModule>
+
+    Options +FollowSymLinks +Indexes
 
     RewriteEngine On
 
@@ -10,7 +14,7 @@
     RewriteRule ^ ^$1 [N]
 
     RewriteCond %{REQUEST_URI} (\.\w+$) [NC]
-    RewriteRule ^(.*)$ public/$1 
+    RewriteRule ^(.*)$ public/$1
 
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
