Added keyboard events + Misc bug fixes on CORS & API

--- a/api/.htaccess
+++ b/api/.htaccess
@@ -21,3 +21,7 @@
     RewriteRule ^ server.php
 
 </IfModule>
+
+# Override PHP max upload size
+php_value upload_max_filesize 40M
+php_value post_max_size 42M
