--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dsgnr",
-  "version": "0.1.0",
+  "version": "0.0.12-dev",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
