--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "staging": "vue-cli-service serve --mode staging",
     "build": "vue-cli-service build"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash": "^4.17.11",
     "lozad": "^1.7.0",
     "tiptap": "^1.6.0",
     "tiptap-extensions": "^1.6.0",
@@ -16,6 +18,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.120",
     "@vue/cli-plugin-babel": "^3.2.2",
     "@vue/cli-service": "^3.2.2",
     "node-sass": "^4.9.0",
